# parallelised-ray-tracing

./: CMakeLists.txt  README.md
src/: main.cpp  main_seq.cpp
